--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,8 @@ body {
   background-color: #0089ba;
 }
 .nav-item {
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 .nav-link {
   color: white;
@@ -108,7 +108,7 @@ body {
 }
 .about-pic {
   margin: 10px;
-  width: 80%;
+  width: 100%;
 }
 .about-text {
   margin: 10px;
@@ -148,4 +148,9 @@ body {
     #1b6dba,
     #128deb
   );
+}
+.toplist {
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  text-align: center;
 }
